--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,3 +7,10 @@ ktor {
         modules = [ com.viartemev.ApplicationKt.module ]
     }
 }
+database {
+    connection = "jdbc:postgresql://localhost:5432/postgres"
+    poolSize = 10
+    password = "password"
+    username = "postgres"
+}
+
