--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,7 +7,7 @@ ktor {
         modules = [ com.viartemev.ApplicationKt.module ]
     }
 }
-database {
+com.viartemev.ktor_jooq.database {
     connection = "jdbc:postgresql://localhost:5432/postgres"
     poolSize = 10
     password = "password"
