--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,10 +4,10 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.viartemev.ApplicationKt.module ]
+        modules = [ com.viartemev.ktor_jooq.ApplicationKt.module ]
     }
 }
-com.viartemev.ktor_jooq.database {
+database {
     connection = "jdbc:postgresql://localhost:5432/postgres"
     poolSize = 10
     password = "password"
