--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.viartemev.ktor_jooq.ApplicationKt.module ]
+        modules = [com.viartemev.tv.ApplicationKt.module]
     }
 }
 database {
