--- a/useJooq.gradle
+++ b/useJooq.gradle
@@ -34,6 +34,7 @@ jooq {
                 name = 'org.jooq.meta.postgres.PostgresDatabase'
                 inputSchema = 'public'
                 includes = '.*'
+                excludes = 'flyway_schema_history'
             }
             generate {
                 relations = true
